--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	margin: 0;
 	scroll-behavior: smooth;
+	cursor: none !important; /* Let's hide the default cursor so it looks way better */
 }
 
 html {
@@ -34,6 +35,34 @@ html {
 
 html.dark {
 	--cursor-color: #fff;
+}
+
+.flare {
+	position: fixed;
+	border: 2px solid #ffffff;
+	border-radius: 50%;
+	mix-blend-mode: exclusion;
+	pointer-events: none;
+	transform: translate(-50%, -50%);
+	z-index: 999999 !important ;
+	background-color: #fff;
+	transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
+	cursor: none !important; /* Let's hide the default cursor so it looks way better */
+}
+
+/* We need to remove this custom cursor in mobile devices */
+@media screen and (max-width: 768px) {
+	.flare {
+		width: 0;
+		height: 0;
+		transition: width 0.2s ease-in-out, height 0.2s ease-in-out,
+			opacity 0.2s ease-in-out;
+	}
+}
+.flare.pointer {
+	opacity: 0 !important;
+	transition: width 0.2s ease-in-out, height 0.2s ease-in-out,
+		opacity 0.2s ease-in-out;
 }
 
 .ui-switch {
